add Github "fork me" ribbon

--- a/index.html
+++ b/index.html
@@ -270,6 +270,13 @@
     display: none;
   }
 
+  .github-ribbon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 0;
+  }
+
   @keyframes flickering {
     0% {
       text-shadow: none;
@@ -342,6 +349,9 @@
       <div></div>
     </div>
   </div>
+  <a href="https://github.com/GaelS/first-contrib-app">
+    <img class="github-ribbon" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
+  </a>
 </body>
 <script src="./src/index.js"></script> </body>
 
