--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
     margin: 0;
   }
 
+  .loading-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #000;
+    opacity: 0.5;
+    pointer-events: none;
+  }
+
   @media (max-width: 640px) {
 
     #search-input {
