add google analytics

--- a/index.html
+++ b/index.html
@@ -466,5 +466,14 @@
   </a>
 </body>
 <script src="./src/index.js"></script> </body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118771350-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'UA-118771350-1');
+</script>
 
 </html>
