Added a headline on the page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="theme-color" content="#FFFFFF">
   <title>First Contrib</title>
   <meta charset="UTF-8"> </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 <style>
   @import url(https://fonts.googleapis.com/css?family=Permanent+Marker);
   @import url(https://fonts.googleapis.com/css?family=Bungee+Inline);
@@ -455,6 +458,13 @@
       text-shadow: inherit;
     }
   }
+  h1{
+    font-family: 'Inter', sans-serif;
+    margin-top: 350px;
+    font-weight: 700;
+    font-size: 52px;
+    color: #f7f7f7f7;
+  }
 </style>
 
 <body>
@@ -462,6 +472,7 @@
   <a href="https://github.com/GaelS/first-contrib-app">
     <img class="github-ribbon" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
   </a>
+  <h1>Hiii I am learning to make my first contribution</h1>
 </body>
 <script src="./src/index.js"></script> </body>
 <!-- Global site tag (gtag.js) - Google Analytics -->
